--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Prakash Shahi</div>
+                <div class="text-2">Tony Stark</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 <a href="#">Hire me</a>
             </div>
@@ -56,7 +56,7 @@
                     <img src="images/profile-11.jpeg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Prakash and I'm a <span class="typing-2"></span></div>
+                    <div class="text">I'm Tony and I'm a <span class="typing-2"></span></div>
                     <p>I Am Web Designer Website Design with extensive experience for over 10 years.
                         Create professional website designs. Responsive, fully customizable with easy Drag-n-Drop Nicepage editor. Adjust colors, fonts, header and footer, layout and other design elements, as well as content and images and many more.</p>
                     <a href="#">Download CV</a>
